--- a/StressIt/StressIt/NLDictionaryView.xib
+++ b/StressIt/StressIt/NLDictionaryView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1552</int>
+		<int key="IBDocument.SystemTarget">1280</int>
 		<string key="IBDocument.SystemVersion">12C60</string>
 		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
 		<string key="IBDocument.AppKitVersion">1187.34</string>
@@ -139,7 +139,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{384, 11}, {81, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="569393264"/>
+						<reference key="NSNextKeyView" ref="457272219"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -163,12 +163,12 @@
 						<reference key="IBUIFontDescription" ref="816823153"/>
 						<reference key="IBUIFont" ref="1001848138"/>
 					</object>
-					<object class="IBUITextField" id="569393264">
+					<object class="IBUITextField" id="457272219">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{42, 49}, {437, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="913747613"/>
+						<reference key="NSNextKeyView" ref="975529517"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -198,7 +198,7 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIButton" id="913747613">
+					<object class="IBUIButton" id="975529517">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{483, 42}, {37, 44}}</string>
@@ -289,7 +289,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">searchBar</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="569393264"/>
+						<reference key="destination" ref="457272219"/>
 					</object>
 					<int key="connectionID">335</int>
 				</object>
@@ -297,7 +297,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">cancelButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="913747613"/>
+						<reference key="destination" ref="975529517"/>
 					</object>
 					<int key="connectionID">337</int>
 				</object>
@@ -345,7 +345,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">searchbarChangeText:</string>
-						<reference key="source" ref="569393264"/>
+						<reference key="source" ref="457272219"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">18</int>
 					</object>
@@ -354,7 +354,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">cancelSearch:</string>
-						<reference key="source" ref="913747613"/>
+						<reference key="source" ref="975529517"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -378,8 +378,8 @@
 							<reference ref="827850425"/>
 							<reference ref="960092290"/>
 							<reference ref="353083468"/>
-							<reference ref="569393264"/>
-							<reference ref="913747613"/>
+							<reference ref="457272219"/>
+							<reference ref="975529517"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -426,12 +426,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">334</int>
-						<reference key="object" ref="569393264"/>
+						<reference key="object" ref="457272219"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">336</int>
-						<reference key="object" ref="913747613"/>
+						<reference key="object" ref="975529517"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -463,6 +463,10 @@
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
+		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
+			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
+			<real value="1280" key="NS.object.0"/>
+		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
